<resources>
    <string name="app_name">Foodie</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="default_age">18</string>
    <string name="fixed_string_age">Age:</string>
    <string name="fixed_string_male">Male</string>
    <string name="fixed_string_female">Female</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="title_tab_one">EAT</string>
    <string name="title_tab_two">CONTACTS</string>
    <string name="title_tab_three">PROFILE</string>

    <string name="menu_qr">Scan QR Code</string>
    <string name="menu_reservation">Reservation</string>
    <string name="menu_twitter">Twitter</string>
    <string name="menu_facebook">Facebook</string>
    <string name="menu_feedback">Feedback</string>

    <string name="bm_string_friends">Friends</string>
    <string name="bm_string_restaurants">Restaurants</string>
    <string name="bm_string_profile">Profile</string>
    <string name="bm_string_settings">Settings</string>
    <string name="bm_string_logout">Logout</string>
    <string name="bm_string_scan">Scan</string>
    <string name="bm_string_reservation">Reservation</string>

    <string name="tab_home_string_first">Last coms</string>
    <string name="tab_home_string_second">Reservations</string>
    <string name="tab_home_string_third">Messages</string>
    <string name="tv_profile_mail_text">phillipe@salaud.com</string>
    <string name="tab_reservation_string_first">Last</string>
    <string name="tab_reservation_string_second">Near me</string>
    <string name="tab_reservation_string_third">Future</string>
    <string name="tab_restaurant_string_first">Last</string>
    <string name="tab_restaurant_string_second">Near me</string>
    <string name="tab_restaurant_string_third">Find</string>

    <string-array name="sports_array">
        <item>Shuttle Badminton</item>
        <item>Tennis</item>
        <item>FootBall</item>
        <item>Basket Ball</item>
        <item>Table Tennis</item>
        <item>Chess</item>
        <item>Hockey</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cd_logo">Logo</string>
    <string name="cd_profile_picture">Profile picture</string>
    <string name="cd_mail_address">Mail address</string>
    <string name="cd_home_address">Home address</string>
    <string name="tab_friend_string_first">List</string>
    <string name="tab_friend_string_second">Message</string>

</resources>
