<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".Activities.MainActivity">
    <item android:id="@+id/action_qr" android:title="@string/menu_qr"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_reservation" android:title="@string/menu_reservation"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_twitter" android:title="@string/menu_twitter"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_facebook" android:title="@string/menu_facebook"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_feedback" android:title="@string/menu_feedback"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>